--- a/src/global.css
+++ b/src/global.css
@@ -1,17 +1,20 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Anton");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
-body {
-  font-family: "Lato", "Helvetica Neue", sans-serif;
+html {
+  font-size: 62.5%;
+  font-family: "DM Sans", sans-serif;
+  scroll-behavior: smooth;
 }
-
 h1 {
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
+  font-family: "Lato", "Helvetica Neue", sans-serif;
 }
