--- a/src/pages/styles/badgeNew.css
+++ b/src/pages/styles/badgeNew.css
@@ -1,6 +1,15 @@
+.badge-new {
+  display: grid;
+  grid-template: repeat(3, 1fr) 1fr repeat(2, 2fr) 1fr / repeat(8, 1fr);
+  grid-auto-rows: 20px;
+}
+.navbar {
+  grid-column: 1 / 9;
+  grid-row: 1 / 2;
+}
 .hero-sapece {
-  width: 100%;
-  height: 150px;
+  grid-column: 1 / 9;
+  grid-row: 2 / 4;
   display: flex;
   align-items: center;
   background-image: url("../../assets/images/space1.png");
@@ -9,5 +18,15 @@
   background-size: cover;
 }
 .badge {
-  width: 250px;
+  grid-column: 2 / 5;
+  grid-row: 5 /7;
+  transform: scale(1, 1);
+  transition: transform 0.4s;
+}
+.badge:hover {
+  transform: scale(1.1, 1.1);
+}
+.badge-form {
+  grid-column: 6 / 8;
+  grid-row: 3 / 7;
 }
