--- a/src/components/styles/badgeForm.css
+++ b/src/components/styles/badgeForm.css
@@ -16,7 +16,9 @@
   font-weight: normal;
 }
 .form-group input {
-  margin-block-start: 5px;
+  padding-block: 5px;
+  padding-inline: 7px;
+  font-size: 1rem;
   border-radius: 50px;
   border: none;
   box-shadow: 0px 0px 2px #0a1128;
@@ -40,5 +42,6 @@
   transition: transform 0.4s;
 }
 .submit-button:hover {
-  transform: scale(1.1, 1.1);
+  cursor: pointer;
+  transform: scale(1.2, 1.2);
 }
