--- a/src/pages/styles/badgeNew.css
+++ b/src/pages/styles/badgeNew.css
@@ -1,25 +1,28 @@
 .badge-new {
+  width: 100vw;
+  height: 100vh;
+  background-color: #f3e8ee;
+}
+.main {
   display: grid;
-  grid-template: repeat(3, 1fr) 1fr repeat(2, 2fr) 1fr / repeat(8, 1fr);
+  grid-template: repeat(5, 1fr) / repeat(5, 1fr);
   grid-auto-rows: 20px;
 }
-.navbar {
-  grid-column: 1 / 9;
-  grid-row: 1 / 2;
-}
 .hero-sapece {
-  grid-column: 1 / 9;
-  grid-row: 2 / 4;
+  grid-column: 1 / 6;
+  grid-row: 1 /3;
+  /* height: 100px; */
   display: flex;
   align-items: center;
   background-image: url("../../assets/images/space1.png");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 .badge {
-  grid-column: 2 / 5;
-  grid-row: 5 /7;
+  grid-column: 2 / 4;
+  grid-row: 4 / 5;
   transform: scale(1, 1);
   transition: transform 0.4s;
 }
@@ -27,6 +30,6 @@
   transform: scale(1.1, 1.1);
 }
 .badge-form {
-  grid-column: 6 / 8;
-  grid-row: 3 / 7;
+  grid-column: 4 / 5;
+  grid-row: 2 / 4;
 }
