--- a/src/components/styles/badgesList.css
+++ b/src/components/styles/badgesList.css
@@ -1,18 +1,15 @@
 .badges__list {
   margin-inline: 20px;
-  text-align: center;
 }
 .badges__list li {
   margin-block-start: 20px;
-  padding: 5px;
-  display: grid;
-  grid-template: 1fr / repeat(3, 1fr);
+  padding: 5px 20px;
+  display: flex;
   align-items: center;
-  justify-items: center;
   border-radius: 10px;
   list-style: none;
   background-color: #fff;
-  box-shadow: 0px 0px 3px #0a1128;
+  box-shadow: 0px 0px 2px #0a1128;
   transform: scale(1, 1);
   transition: transform 0.4s;
 }
@@ -20,12 +17,10 @@
   transform: scale(1.1, 1.1);
 }
 .badges__list li img {
-  grid-column: 1 / 2;
   width: 38px;
   border-radius: 50%;
 }
 .badges__list .info {
-  grid-column: 2 / 4;
   margin-inline-start: 15px;
 }
 .badges__list .info .list-name {
