--- a/src/global.css
+++ b/src/global.css
@@ -13,6 +13,7 @@ html {
   font-size: 62.5%;
   font-family: "DM Sans", sans-serif;
   scroll-behavior: smooth;
+  background-color: #f3e8ee;
 }
 h1 {
   /* font-family: "Anton", sans-serif; */
