--- a/src/pages/styles/badgeNew.css
+++ b/src/pages/styles/badgeNew.css
@@ -1,17 +1,16 @@
 .badge-new {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #f3e8ee;
 }
 .main {
   display: grid;
-  grid-template: repeat(5, 1fr) / repeat(5, 1fr);
+  grid-template: repeat(3, 1fr) repeat(2, 2fr) / 1fr 4fr 1fr 2fr 1fr;
   grid-auto-rows: 20px;
 }
 .hero-sapece {
   grid-column: 1 / 6;
   grid-row: 1 /3;
-  /* height: 100px; */
   display: flex;
   align-items: center;
   background-image: url("../../assets/images/space1.png");
@@ -21,8 +20,8 @@
   background-attachment: fixed;
 }
 .badge {
-  grid-column: 2 / 4;
-  grid-row: 4 / 5;
+  grid-column: 2 / 3;
+  grid-row: 4 / 6;
   transform: scale(1, 1);
   transition: transform 0.4s;
 }
@@ -31,5 +30,6 @@
 }
 .badge-form {
   grid-column: 4 / 5;
-  grid-row: 2 / 4;
+  grid-row: 2 / 6;
+  align-self: center;
 }
