--- a/src/pages/styles/badges.css
+++ b/src/pages/styles/badges.css
@@ -1,47 +1,23 @@
 .badges {
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: grid;
-  grid-template: 50px 100px repeat(4, 1fr) / 100px repeat(4, 1fr);
-  grid-auto-rows: min-content(100px);
-  background-color: #f3e8ee;
-}
-.badges .navbar {
-  grid-column: 1 / 6;
-  grid-row: 1 / 2;
+  grid-template: repeat(5, 1fr) / 1fr 3fr 1fr;
 }
 .badges__hero {
-  grid-column: 1 / 6;
-  grid-row: 2 / 3;
-  height: 100px;
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
   display: flex;
   justify-content: center;
   background-image: url("../../assets/images/space1.png");
   background-attachment: fixed;
 }
 .main__button {
-  grid-column: 5 / 6;
-  grid-row: 3 / 4;
-  align-self: center;
-  justify-self: center;
-}
-.main__button button {
-  width: 80px;
-  height: 30px;
-  margin-block-start: 20px;
-  color: #fff;
-  border: none;
-  border-radius: 50px;
-  background-color: #98ca3f;
-  box-shadow: 0px 0px 3px #0a1128;
-  transform: scale(1, 1);
-  transition: transform 0.4s;
-}
-.main__button button:hover {
-  cursor: pointer;
-  transform: scale(1.2, 1.2);
+  grid-column: 2/ 3;
+  grid-row: 2 / 3;
+  align-self: flex-end;
+  justify-self: end;
 }
 .badges .badges__list {
-  grid-column: 2 / 4;
-  grid-row: 4 / 6;
+  grid-column: 2 / 3;
+  grid-row: 3 / 6;
 }
