--- a/src/pages/styles/badgeNew.css
+++ b/src/pages/styles/badgeNew.css
@@ -12,6 +12,7 @@
   grid-column: 1 / 6;
   grid-row: 1 /3;
   display: flex;
+  justify-content: center;
   align-items: center;
   background-image: url("../../assets/images/space1.png");
   background-position: bottom;
