--- a/src/pages/styles/badges.css
+++ b/src/pages/styles/badges.css
@@ -1,7 +1,7 @@
 .badges {
   height: 100%;
   display: grid;
-  grid-template: repeat(5, 1fr) / 1fr 3fr 1fr;
+  grid-template: 150px 50px 1fr 100px / 1fr 3fr 1fr;
 }
 .badges__hero {
   grid-column: 1 / 4;
@@ -11,6 +11,9 @@
   background-image: url("../../assets/images/space1.png");
   background-attachment: fixed;
 }
+.badges__hero img {
+  width: 250px;
+}
 .main__button {
   grid-column: 2/ 3;
   grid-row: 2 / 3;
@@ -19,5 +22,5 @@
 }
 .badges .badges__list {
   grid-column: 2 / 3;
-  grid-row: 3 / 6;
+  grid-row: 3 / 4;
 }
