--- a/src/components/styles/badgesList.css
+++ b/src/components/styles/badgesList.css
@@ -1,6 +1,10 @@
 .badges__list {
   margin-inline: 20px;
 }
+.badges__list a {
+  text-decoration: none;
+  color: #310a31;
+}
 .badges__list li {
   margin-block-start: 20px;
   padding: 5px 20px;
@@ -9,7 +13,7 @@
   border-radius: 10px;
   list-style: none;
   background-color: #fff;
-  box-shadow: 0px 0px 2px #0a1128;
+  box-shadow: 0px 0px 2px #310a31;
   transform: scale(1, 1);
   transition: transform 0.4s;
 }
@@ -34,7 +38,7 @@
 }
 .badges__list .info .list-social {
   display: flex;
-  justify-content: space-between;
+  justify-content: left;
   color: #15a9f4;
   font-size: 1rem;
 }
