--- a/src/components/styles/badgesDetails.css
+++ b/src/components/styles/badgesDetails.css
@@ -1,16 +1,24 @@
 .container {
   width: 100%;
   display: grid;
-  grid-template: 150px 1fr 3fr 1fr / repeat(5, 1fr);
+  grid-template: 150px 1fr 6fr 1fr / repeat(5, 1fr);
 }
 .container .hero-space {
   grid-column: 1 / 6;
   grid-row: 1 / 2;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   color: white;
   background-image: url("../../assets/images/space1.png");
+  background-attachment: fixed;
+}
+.container .hero-space h1 {
+  margin-inline-start: 30px;
+  font-weight: lighter;
+}
+.container .hero-space h1 .bold {
+  font-weight: bold;
 }
 .container .badge {
   grid-column: 2 / 4;
