--- a/src/components/styles/mainButton.css
+++ b/src/components/styles/mainButton.css
@@ -5,10 +5,15 @@
   color: #fff;
   border: none;
   border-radius: 50px;
-  background-color: #98ca3f;
   box-shadow: 0px 0px 2px #0a1128;
   transform: scale(1, 1);
   transition: transform 0.4s;
+}
+.green {
+  background-color: #98ca3f;
+}
+.red {
+  background-color: red;
 }
 .main-button:hover {
   cursor: pointer;
