--- a/src/global.css
+++ b/src/global.css
@@ -19,3 +19,10 @@ h1 {
   /* font-family: "Anton", sans-serif; */
   font-family: "Lato", "Helvetica Neue", sans-serif;
 }
+.loader {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
