--- a/src/pages/styles/root.css
+++ b/src/pages/styles/root.css
@@ -1,16 +1,31 @@
 .root {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 50px);
   display: grid;
-  grid-template: repeat(3, 1fr) / 1fr 2fr 1fr 3fr 1fr;
+  grid-template: 1fr 5fr 1fr / 1fr 2fr 1fr 3fr 1fr;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  background-image: url("../../assets/images/space1.png");
 }
-.root__background-video {
-  grid-column: 1 / 4;
-  grid-row: 1 / 4;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  filter: blur(2px);
+.root .logo {
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+  width: 400px;
+}
+.root .root__info {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.root .root__info h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.root .root__info p {
+  margin-block-start: 25px;
+  font-size: 1.3rem;
+  font-weight: lighter;
 }
