--- a/src/components/styles/notFound.css
+++ b/src/components/styles/notFound.css
@@ -6,6 +6,10 @@
   justify-content: center;
   align-items: center;
   background-image: url("../../assets/images/space1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   color: white;
 }
 .not-found__container h1 {
