--- a/src/pages/styles/badgeEdit.css
+++ b/src/pages/styles/badgeEdit.css
@@ -34,3 +34,27 @@
   grid-row: 2 / 6;
   align-self: center;
 }
+
+@media (max-width: 910px) {
+  @media (max-width: 910px) {
+    .badge-edit .main {
+      grid-template: repeat(2, 1fr) 2fr 1fr 4fr 1fr / 1fr 4fr 1fr;
+    }
+    .badge-edit .hero-sapece {
+      grid-column: 1 / 4;
+      grid-row: 1 / 3;
+    }
+    .badge-edit .badge {
+      grid-column: 2 / 3;
+      grid-row: 2 / 4;
+      justify-self: center;
+    }
+    .badge-edit .badge-form {
+      grid-column: 2 / 3;
+      grid-row: 5 / 6;
+    }
+    .badge-edit .hero-sapece img {
+      align-self: flex-start;
+    }
+  }
+}
