--- a/src/pages/styles/badges.css
+++ b/src/pages/styles/badges.css
@@ -9,6 +9,9 @@
   display: flex;
   justify-content: center;
   background-image: url("../../assets/images/space1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-attachment: fixed;
 }
 .badges__hero img {
