--- a/src/pages/styles/root.css
+++ b/src/pages/styles/root.css
@@ -4,9 +4,15 @@
   display: grid;
   grid-template: 1fr 5fr 1fr / 1fr 2fr 1fr 3fr 1fr;
   justify-content: center;
+  justify-items: center;
   align-items: center;
+  align-content: center;
   color: #fff;
   background-image: url("../../assets/images/space1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 .root .logo {
   grid-column: 4 / 5;
@@ -16,6 +22,7 @@
 .root .root__info {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  padding-inline: 20px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -28,4 +35,22 @@
   margin-block-start: 25px;
   font-size: 1.3rem;
   font-weight: lighter;
+}
+@media (min-width: 910px) {
+  .root {
+    grid-template: 5fr 3fr 1fr / 1fr 1fr;
+  }
+  .root .logo {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
+  .root .root__info {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+}
+@media (min-width: 480px) {
+  .root .logo {
+    width: 250px;
+  }
 }
