--- a/src/pages/styles/badgeNew.css
+++ b/src/pages/styles/badgeNew.css
@@ -34,7 +34,7 @@
   grid-row: 2 / 6;
   align-self: center;
 }
-@media (max-width: 910px) {
+@media (min-width: 910px) {
   .badge-new .main {
     grid-template: repeat(2, 1fr) 2fr 1fr 4fr 1fr / 1fr 4fr 1fr;
   }
