--- a/src/components/styles/badgesDetails.css
+++ b/src/components/styles/badgesDetails.css
@@ -32,7 +32,7 @@
   justify-content: flex-start;
   align-items: center;
 }
-@media (min-width: 910px) {
+@media (max-width: 910px) {
   .container {
     grid-template: 3fr 1fr 3fr 1fr / 1fr 3fr 1fr;
   }
