--- a/src/pages/styles/root.css
+++ b/src/pages/styles/root.css
@@ -36,7 +36,7 @@
   font-size: 1.3rem;
   font-weight: lighter;
 }
-@media (min-width: 910px) {
+@media (max-width: 910px) {
   .root {
     grid-template: 5fr 3fr 1fr / 1fr 1fr;
   }
@@ -49,7 +49,7 @@
     grid-row: 2 / 3;
   }
 }
-@media (min-width: 480px) {
+@media (max-width: 480px) {
   .root .logo {
     width: 250px;
   }
